--- a/Config.yml
+++ b/Config.yml
@@ -1,13 +1,14 @@
 # Here is where you put your bot token.
-TOKEN: NTE2NDkzNzM3NTg1NjcyMTkz.XPnT4w.sJT4UjvNJKXRPHrvxt77lCzvpMc
+TOKEN: YOUR_TOKEN
 
 # A list of channels that log messages will be sent to.
 Log Channels:
-  - 586377523051495427
+  - 000000000000000000
   # Un-comment the line below (remove the '#') and set the id here to add another channel.
   #- 000000000000000000
 
 # The color of the sidebar of the messages. Must be in decimal format.
+# This link will let you pick Hex colors: https://www.google.com/search?q=hex+color+picker&oq=&sourceid=chrome&ie=UTF-8
 # This link will convert Hex colors to decimal: https://www.rapidtables.com/convert/number/hex-to-decimal.html
 Embed Colors:
   - 16777215 # white
@@ -16,31 +17,31 @@ Embed Colors:
 # The url for the icon at the bottom of your footer image.
 # To use an image sent from discord, right click the image,
 # copy the link, and paste it below.
-Footer Icon URL: https://i.ibb.co/BjH0pZ1/6e378837cf2790c34e31973d651420ae.jpg
+Footer Icon URL: https://i.ibb.co/QnJgX2w/Logo-02.png
 
 # The text for the footer of the messages.
 Footer Text: EXAMPLE FOOTER TEXT
 
 # Command prefix for all commands.
-Prefix: '>'
+Prefix: '!'
 
 # This is where you will enter your twitter application info.
 # You must add developer authentication to your Twitter before
 # you can access this: https://developer.twitter.com/
 Twitter Info:
-  API Key: vdFCtzYTkFCdtyhovFMywk6Ot
-  API Secret: LJRWJfnZPaxGObBq3MOnYkt3BLL8UgfmeY961mxrWtg1ywvbWZ
-  Access Token: 1042871819059916800-wIOAB1L7SpRuTpbMAzRgUcEnR4UPyp
-  Access Secret: 1CGQBJUNyrIBlRwtpQyk79M4aiqbdRVWSAOAUC1YCDhGD
+  API Key: YOUR_KEY
+  API Secret: YOUR_SECRET
+  Access Token: YOUR_TOKEN
+  Access Secret: YOUR_ACCESS_SECRET
 
   # Post a list of channel IDs you want to have all images posted from here.
   Success Channel IDs:
-    - 586445115892170772
+    - 0000000000000000
     #- 0000000000000000 # Uncomment the '#' at the beginning of the line to add another channel.
 
   # This is where you set the message to get posted along with the image.
   # Use '{user}' wherever you want to put the name of the person who posted the image.
-  Twitter Post Message: "Thanks To Heroicos_HM!\nPosted by {user}"
+  Twitter Post Message: "Thanks To @HeroicosH!\nPosted by {user}"
 
   # If this is 'true', a log message will be sent every time an image is posted to twitter.
   Log All Posts: true
@@ -49,7 +50,7 @@ Twitter Info:
 Options:
   # This option will show the timestamp at the end of
   # the footer of the embedded messages.
-  Embed Timestamp: true
+  Embed Timestamp: false
 
   # This option will delete the user's message after they send a command.
   # NOTE: THE BOT NEEDS THE 'MANAGE MESSAGES' PERMISSION FOR THIS TO WORK
@@ -57,11 +58,11 @@ Options:
 
   # This will show the author at the top of the message as the person tho used the command.
   # Works well in combination with 'Delete Commands'
-  Show Author: true
+  Show Author: false
 
   # Sets the 'Playing' status of the bot.
   Game Status:
     # 'true' will display 'Playing <Game>', 'false' won't display anything.
     Active: false
-    # The game to display
-    Game: '>help'
+    # The game to display - use '{prefix}' to put in the bots prefix.
+    Game: '{prefix}help'
