--- a/Config.yml
+++ b/Config.yml
@@ -1,9 +1,9 @@
 # Here is where you put your bot token.
-TOKEN: YOUR_TOKEN
+TOKEN: NTE2NDkzNzM3NTg1NjcyMTkz.XPnT4w.sJT4UjvNJKXRPHrvxt77lCzvpMc
 
 # A list of channels that log messages will be sent to.
 Log Channels:
-  - 000000000000000000
+  - 586377523051495427
   # Un-comment the line below (remove the '#') and set the id here to add another channel.
   #- 000000000000000000
 
@@ -29,14 +29,14 @@ Prefix: '!'
 # You must add developer authentication to your Twitter before
 # you can access this: https://developer.twitter.com/
 Twitter Info:
-  API Key: YOUR_KEY
-  API Secret: YOUR_SECRET
-  Access Token: YOUR_TOKEN
-  Access Secret: YOUR_ACCESS_SECRET
+  API Key: vdFCtzYTkFCdtyhovFMywk6Ot
+  API Secret: LJRWJfnZPaxGObBq3MOnYkt3BLL8UgfmeY961mxrWtg1ywvbWZ
+  Access Token: 1042871819059916800-wIOAB1L7SpRuTpbMAzRgUcEnR4UPyp
+  Access Secret: 1CGQBJUNyrIBlRwtpQyk79M4aiqbdRVWSAOAUC1YCDhGD
 
   # Post a list of channel IDs you want to have all images posted from here.
   Success Channel IDs:
-    - 0000000000000000
+    - 586445115892170772
     #- 0000000000000000 # Uncomment the '#' at the beginning of the line to add another channel.
 
   # This is where you set the message to get posted along with the image.
@@ -58,11 +58,11 @@ Options:
 
   # This will show the author at the top of the message as the person tho used the command.
   # Works well in combination with 'Delete Commands'
-  Show Author: false
+  Show Author: true
 
   # Sets the 'Playing' status of the bot.
   Game Status:
     # 'true' will display 'Playing <Game>', 'false' won't display anything.
-    Active: false
+    Active: true
     # The game to display - use '{prefix}' to put in the bots prefix.
     Game: '{prefix}help'
